<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qr</string>
    <string name="action_settings">Settings</string>
    <string name="btn_scan">Scan</string>
    <string name="info">Database file is located at /sdcard/codes/scanned. There is no file extension at the back but you can just open it with any database editor.</string>
    <string name="copyright">©2013 Kenneth</string>
    <string name="btnCode">Barcode</string>
    <string name="btnQR">QR Code</string>

</resources>
